--- a/card.html
+++ b/card.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Herencia</title>
-    <link rel="stylesheet" href="estilos/herencia.css" />
+    <title>Card</title>
+    <link rel="stylesheet" href="estilos/estilo.css" />
   </head>
   <body>
     <section class="card">
       <h1 class="card_title" id="color">Titulo</h1>
 
       <figure class="figure">
-        <img src="imagenes/img1.jpg" class="figure_img" alt="Gato" />
+        <img src="imagenes/img.jpg" class="figure_img" alt="Gato" />
       </figure>
 
       <p class="color">
@@ -23,7 +23,5 @@
 
       <a href="#" class="btn btn--border">Ver más</a>
     </section>
-
-    <h1>titulo 2</h1>
   </body>
 </html>
