--- a/index.html
+++ b/index.html
@@ -6,4 +6,20 @@
     <title>Document</title>
   </head>
   <body></body>
+    <header>
+      <div class="contenedor">
+        <h1 class="texto">Este es mi Primer Proyecto</h1>
+        <br />
+      </div>
+
+    </header>
+
+    <main>
+      <nav>
+        <a href="Card.html"> Mi Primer Tarjeta</a>
+      </nav>
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
