--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="estilos/estilo.css" />
   </head>
-  <body></body>
+  <body>
     <header>
       <div class="contenedor">
         <h1 class="texto">Este es mi Primer Proyecto</h1>
         <br />
       </div>
-
     </header>
 
     <main>
