--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
       <nav>
-        <a href="Card.html"> Mi Primer Tarjeta</a>
+        <a href="card.html"> Mi Primer Tarjeta</a>
       </nav>
     </main>
 
