--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Card</title>
     <link rel="stylesheet" href="estilos/estilo.css" />
   </head>
   <body>
-    <header>
-      <div class="contenedor">
-        <h1 class="texto">Este es mi Primer Proyecto</h1>
-        <br />
-      </div>
-    </header>
+    <section class="card">
+      <h1 class="card_title" id="color">Titulo</h1>
 
-    <main>
-      <nav>
-        <a href="card.html"> Mi Primer Tarjeta</a>
-      </nav>
-    </main>
+      <figure class="figure">
+        <img src="imagenes/img.jpg" class="figure_img" alt="Gato" />
+      </figure>
 
-    <footer></footer>
+      <p class="color">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+        praesentium sequi illum voluptates similique minima eius dolores
+        obcaecati eligendi debitis, impedit voluptatum adipisci explicabo
+        accusantium nihil deserunt, quisquam corrupti omnis.
+      </p>
+
+      <a href="#" class="btn btn--border">Ver más</a>
+    </section>
   </body>
 </html>
